--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,50 @@
 ---
-
+const data = await fetch(Astro.site?.href.concat('api/data') ?? '').then(
+  (res) => res.json(),
+)
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <meta name='viewport' content='width=device-width' />
+    <meta name='generator' content={Astro.generator} />
+    <link
+      rel='stylesheet'
+      href='https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css'
+    />
+    <title>Astro CF and API</title>
+  </head>
+  <body class='container'>
+    <header>
+      <h1>Astro try Cloudflare with API!</h1>
+    </header>
+    <div>
+      <h2>Response from request time:</h2>
+      <pre>{JSON.stringify(data, null, 2)}</pre>
+      <div>
+        <img src={data.image} alt={data.answer} height='240' width='auto' />
+      </div>
+    </div>
+    <hr />
+    <section style='padding: 1rem 0;'>
+      <header style='display: flex; align-items: center;'>
+        <h2>Client request!</h2>
+        <button style='margin-left: auto;' data-action>Make it!</button>
+      </header>
+      <pre data-action-output></pre>
+    </section>
+  </body>
 </html>
+
+<script>
+  const button = document.querySelector('button[data-action]')
+  const output = document.querySelector('pre[data-action-output]')
+  if (!button || !output) throw new Error('containers not found')
+  button.addEventListener('click', async () => {
+    const response = await fetch('https://swapi.dev/api/people/1/')
+    const data = await response.json()
+    output.textContent = JSON.stringify(data, null, 2)
+  })
+</script>
